--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,29 @@
-# Node modules
-frontend/node_modules/
-backend/node_modules/
+# Dependencies
+node_modules/
 
-# Build output
-frontend/build/
-backend/dist/
+# Build folders
+build/
+dist/
 
 # Environment files
 .env
-backend/.env
-frontend/.env
+.env.local
+.env.development
+.env.production
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 pnpm-debug.log*
 
-# OS generated files
-.DS_Store
-Thumbs.db
+# Cache
+.cache/
+.parcel-cache/
 
-# IDE/editor folders
+# Editor / IDE
 .vscode/
 .idea/
 
-# Temporary files
-*.tmp
-*.swp
+# OS files
+.DS_Store
+Thumbs.db
