--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,20 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@2captcha/captcha-solver": "^1.3.2",
+    "2captcha": "^3.0.5-2",
     "axios": "^1.13.4",
+    "axios-cookiejar-support": "^6.0.5",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "he": "^1.2.0",
-    "mongoose": "^9.1.5"
+    "jsdom": "^28.0.0",
+    "mongoose": "^9.1.5",
+    "puppeteer": "^24.36.1",
+    "qs": "^6.14.1",
+    "tough-cookie": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
